# GeoBA

./: CMakeLists.txt  Dockerfile  main.cpp
.devcontainer/: devcontainer.json
backup/: CostFunctions copy.cpp  CostFunctions2-14.cpp  CostFunctions2-14.h  CostFunctions2-6.cpp  Dockerfile  ErrorManager.h  Initializer.h  Optimizer2-9.cpp  Projection-T.h  Projection-bvh.cpp  Projection-raycast.cpp  ProjectionUpdater.h  SharedData.h
backup/tests/: test_costfunctions.cpp  test_mesh_model.cpp  test_projection.cpp
cache/: CostFunctions-singlepoint.cpp  CostFunctions-singlepoint.h  ErrorManager.cpp  Initializer.cpp  Optimizer copy.cpp  ProjectionUpdater.cpp
cache/tests/: test_errormanager.cpp  test_image_processor.cpp  test_optimizer.cpp
data/Triplettest/: poses_gt.txt  poses_init.txt
data/Triplettest/depth/: 0002.tiff
data/singletest/: poses_gt.txt  poses_init.txt
data/test/: addNoise.py  camera_intrinsics.json  poses_init.txt  rename.py  rmse.py  times.txt  timestamps.py
data/test/depth/: 0000.tiff  0001.tiff  0003.tiff  0004.tiff  0005.tiff  0006.tiff  0007.tiff  0008.tiff  0009.tiff  0010.tiff  0011.tiff  0012.tiff  0013.tiff  0014.tiff  0015.tiff  0016.tiff  0017.tiff  0018.tiff  0019.tiff  0020.tiff  0021.tiff  0022.tiff  0023.tiff  0024.tiff  0025.tiff  0026.tiff  0027.tiff  0028.tiff  0029.tiff  0030.tiff  0031.tiff  0032.tiff  0033.tiff  0034.tiff  0035.tiff  0036.tiff  0037.tiff  0038.tiff  0039.tiff  0040.tiff  (+107 more)
data/test/rgb/: camera.txt
dso/: Dockerfile
include/: BVH.h  CostFunctions.h  DatasetManager.h  Evaluation.h  ImageProcessor.h  MeshModel.h  Optimizer.h  Projection.h
src/: BVH.cpp  CostFunctions.cpp  CostFunctions1.cpp  DatasetManager.cpp  Evaluation.cpp  ImageProcessor.cpp  MeshModel.cpp  Optimizer.cpp  Optimizer1.cpp  Optimizer2.cpp  Projection.cpp
(+1 files in other folders)
